# knowitall-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  eslint.config.js  package-lock.json  package.json
src/: client.js  connection.js  context.js  gradio.js  index.js  logger.js  ollama.js  tts.js  voiceConnection.js
tts_rvc_server/: .dockerignore  Dockerfile  Dockerfile.base  Pipfile  pyproject.toml  requirements.txt  server.py  voice_config.example.json
