[project]
name = "tts-rvc-server"
version = "0.1.0"
description = "TTS + RVC voice synthesis server"
requires-python = ">=3.12"
dependencies = [
    "torch==2.9.1",
    "torchaudio==2.9.1",
    "tts-with-rvc==0.1.9.2",
    "fastapi==0.127.1",
    "uvicorn==0.40.0",
    "setuptools<81",  # Pin to avoid pkg_resources removal until tts-with-rvc updates librosa
]

[dependency-groups]
dev = [
    "ruff==0.14.10",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }